--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "babel-plugin-react-intl": "^3.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-intl": "^2.7.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.2"
   },
   "scripts": {
